Use netapp_host_type instead of netapp_eseries_host_type
This patch deprecates netapp_eseries_host_type in favor of netapp_host_type.

Change-Id: I113c770ca2e4dc54526d4262bacae48e223c54f4
Closes-Bug: 1579161

--- a/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
@@ -70,12 +70,22 @@ parameters:
   CinderNetappStoragePools:
     type: string
     default: ''
-  CinderNetappEseriesHostType:
+  CinderNetappHostType:
     type: string
-    default: 'linux_dm_mp'
+    default: ''
   CinderNetappWebservicePath:
     type: string
     default: '/devmgr/v2'
+  # DEPRECATED options for compatibility with older versions
+  CinderNetappEseriesHostType:
+    type: string
+    default: 'linux_dm_mp'
+
+parameter_groups:
+- label: deprecated
+  description: Do not use deprecated params, they will be removed.
+  parameters:
+  - CinderNetappEseriesHostType
 
 resources:
   CinderNetappConfig:
@@ -108,7 +118,7 @@ resources:
                 cinder::backend::netapp::netapp_controller_ips: {get_input: NetappControllerIps}
                 cinder::backend::netapp::netapp_sa_password: {get_input: NetappSaPassword}
                 cinder::backend::netapp::netapp_storage_pools: {get_input: NetappStoragePools}
-                cinder::backend::netapp::netapp_eseries_host_type: {get_input: NetappEseriesHostType}
+                cinder::backend::netapp::netapp_host_type: {get_input: NetappHostType}
                 cinder::backend::netapp::netapp_webservice_path: {get_input: NetappWebservicePath}
 
   CinderNetappDeployment:
@@ -139,7 +149,7 @@ resources:
         NetappControllerIps: {get_param: CinderNetappControllerIps}
         NetappSaPassword: {get_param: CinderNetappSaPassword}
         NetappStoragePools: {get_param: CinderNetappStoragePools}
-        NetappEseriesHostType: {get_param: CinderNetappEseriesHostType}
+        NetappHostType: {get_param: CinderNetappHostType}
         NetappWebservicePath: {get_param: CinderNetappWebservicePath}
 
 outputs:
