Move per-role NetIpListMap's into jinja template loop
Change-Id: I8fc855833e8c602e94d0e8b330a713de1c98f901

--- a/overcloud.j2.yaml
+++ b/overcloud.j2.yaml
@@ -282,6 +282,20 @@ resources:
       config: {get_resource: AllNodesValidationConfig}
       servers: {get_attr: [{{role.name}}, attributes, nova_server_resource]}
 
+  {{role.name}}IpListMap:
+    type: OS::TripleO::Network::Ports::NetIpListMap
+    properties:
+      ControlPlaneIpList: {get_attr: [{{role.name}}, ip_address]}
+      ExternalIpList: {get_attr: [{{role.name}}, external_ip_address]}
+      InternalApiIpList: {get_attr: [{{role.name}}, internal_api_ip_address]}
+      StorageIpList: {get_attr: [{{role.name}}, storage_ip_address]}
+      StorageMgmtIpList: {get_attr: [{{role.name}}, storage_mgmt_ip_address]}
+      TenantIpList: {get_attr: [{{role.name}}, tenant_ip_address]}
+      ManagementIpList: {get_attr: [{{role.name}}, management_ip_address]}
+      EnabledServices: {get_attr: [{{role.name}}ServiceChain, role_data, service_names]}
+      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
+      ServiceHostnameList: {get_attr: [{{role.name}}, hostname]}
+
 {% endfor %}
 
   Controller:
@@ -434,76 +448,6 @@ resources:
               - get_attr: [CephStorageServiceChain, role_data, global_config_settings]
           ServiceNames: {get_attr: [CephStorageServiceChain, role_data, service_names]}
           MonitoringSubscriptions: {get_attr: [CephStorageServiceChain, role_data, monitoring_subscriptions]}
-
-  ControllerIpListMap:
-    type: OS::TripleO::Network::Ports::NetIpListMap
-    properties:
-      ControlPlaneIpList: {get_attr: [Controller, ip_address]}
-      ExternalIpList: {get_attr: [Controller, external_ip_address]}
-      InternalApiIpList: {get_attr: [Controller, internal_api_ip_address]}
-      StorageIpList: {get_attr: [Controller, storage_ip_address]}
-      StorageMgmtIpList: {get_attr: [Controller, storage_mgmt_ip_address]}
-      TenantIpList: {get_attr: [Controller, tenant_ip_address]}
-      ManagementIpList: {get_attr: [Controller, management_ip_address]}
-      EnabledServices: {get_attr: [ControllerServiceChain, role_data, service_names]}
-      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
-      ServiceHostnameList: {get_attr: [Controller, hostname]}
-
-  ComputeIpListMap:
-    type: OS::TripleO::Network::Ports::NetIpListMap
-    properties:
-      ControlPlaneIpList: {get_attr: [Compute, ip_address]}
-      ExternalIpList: {get_attr: [Compute, external_ip_address]}
-      InternalApiIpList: {get_attr: [Compute, internal_api_ip_address]}
-      StorageIpList: {get_attr: [Compute, storage_ip_address]}
-      StorageMgmtIpList: {get_attr: [Compute, storage_mgmt_ip_address]}
-      TenantIpList: {get_attr: [Compute, tenant_ip_address]}
-      ManagementIpList: {get_attr: [Compute, management_ip_address]}
-      EnabledServices: {get_attr: [ComputeServiceChain, role_data, service_names]}
-      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
-      ServiceHostnameList: {get_attr: [Compute, hostname]}
-
-  BlockStorageIpListMap:
-    type: OS::TripleO::Network::Ports::NetIpListMap
-    properties:
-      ControlPlaneIpList: {get_attr: [BlockStorage, ip_address]}
-      ExternalIpList: {get_attr: [BlockStorage, external_ip_address]}
-      InternalApiIpList: {get_attr: [BlockStorage, internal_api_ip_address]}
-      StorageIpList: {get_attr: [BlockStorage, storage_ip_address]}
-      StorageMgmtIpList: {get_attr: [BlockStorage, storage_mgmt_ip_address]}
-      TenantIpList: {get_attr: [BlockStorage, tenant_ip_address]}
-      ManagementIpList: {get_attr: [BlockStorage, management_ip_address]}
-      EnabledServices: {get_attr: [BlockStorageServiceChain, role_data, service_names]}
-      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
-      ServiceHostnameList: {get_attr: [BlockStorage, hostname]}
-
-  ObjectStorageIpListMap:
-    type: OS::TripleO::Network::Ports::NetIpListMap
-    properties:
-      ControlPlaneIpList: {get_attr: [ObjectStorage, ip_address]}
-      ExternalIpList: {get_attr: [ObjectStorage, external_ip_address]}
-      InternalApiIpList: {get_attr: [ObjectStorage, internal_api_ip_address]}
-      StorageIpList: {get_attr: [ObjectStorage, storage_ip_address]}
-      StorageMgmtIpList: {get_attr: [ObjectStorage, storage_mgmt_ip_address]}
-      TenantIpList: {get_attr: [ObjectStorage, tenant_ip_address]}
-      ManagementIpList: {get_attr: [ObjectStorage, management_ip_address]}
-      EnabledServices: {get_attr: [ObjectStorageServiceChain, role_data, service_names]}
-      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
-      ServiceHostnameList: {get_attr: [ObjectStorage, hostname]}
-
-  CephStorageIpListMap:
-    type: OS::TripleO::Network::Ports::NetIpListMap
-    properties:
-      ControlPlaneIpList: {get_attr: [CephStorage, ip_address]}
-      ExternalIpList: {get_attr: [CephStorage, external_ip_address]}
-      InternalApiIpList: {get_attr: [CephStorage, internal_api_ip_address]}
-      StorageIpList: {get_attr: [CephStorage, storage_ip_address]}
-      StorageMgmtIpList: {get_attr: [CephStorage, storage_mgmt_ip_address]}
-      TenantIpList: {get_attr: [CephStorage, tenant_ip_address]}
-      ManagementIpList: {get_attr: [CephStorage, management_ip_address]}
-      EnabledServices: {get_attr: [CephStorageServiceChain, role_data, service_names]}
-      ServiceNetMap: {get_attr: [ServiceNetMap, service_net_map_lower]}
-      ServiceHostnameList: {get_attr: [CephStorage, hostname]}
 
   allNodesConfig:
     type: OS::TripleO::AllNodes::SoftwareConfig
