--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -13,6 +13,7 @@ parameters:
     default: {}
   DeployIdentifier:
      type: string
+     default: ''
      description: Value which changes if the node configuration may need to be re-applied
 
 resources:
