--- a/puppet/ceph-storage-post.yaml
+++ b/puppet/ceph-storage-post.yaml
@@ -15,6 +15,7 @@ parameters:
     default: {}
   DeployIdentifier:
      type: string
+     default: ''
      description: Value which changes if the node configuration may need to be re-applied
 
 resources:
