--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -10,6 +10,7 @@ parameters:
     type: json
   DeployIdentifier:
      type: string
+     default: ''
      description: Value which changes if the node configuration may need to be re-applied
   RoleData:
     type: json
