--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -62,10 +62,6 @@ parameters:
     default: nic1
     description: What interface to bridge onto br-ex for network nodes.
     type: string
-  SwiftRawDisks:
-    default: {}
-    description: 'A hash of additional raw devices to use as Swift backend (eg. {sdb: {}})'
-    type: json
   ServiceNetMap:
     default: {}
     description: Mapping of service_name -> network name. Typically set
@@ -313,8 +309,7 @@ resources:
             - service_configs
             - service_names
             - controller
-            - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
-            - bootstrap_node # provided by allNodesConfig
+            - bootstrap_node # provided by BootstrapNodeConfig
             - all_nodes # provided by allNodesConfig
             - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
@@ -465,27 +460,6 @@ outputs:
     description: Heat resource handle for the Nova compute server
     value:
       {get_resource: Controller}
-  swift_device:
-    description: Swift device formatted for swift-ring-builder
-    value:
-      str_replace:
-        template:
-          list_join:
-            - ','
-            - ['r1z1-IP:%PORT%/d1']
-            - repeat:
-                template: 'r1z1-IP:%PORT%/DEVICE'
-                for_each:
-                  DEVICE: {get_param: SwiftRawDisks}
-        params:
-          IP:
-            get_attr:
-              - NetIpMap
-              - net_ip_map
-              - str_replace:
-                  template: "NETWORK_uri"
-                  params:
-                    NETWORK: {get_param: [ServiceNetMap, SwiftMgmtNetwork]}
   tls_key_modulus_md5:
     description: MD5 checksum of the TLS Key Modulus
     value: {get_attr: [NodeTLSData, key_modulus_md5]}
