Fix aodh auth url to remove suffix
puppet aodh auth type defaults to password type and v2
auth_url doesnt work with domain. This fixes the url to
not include suffix.

Change-Id: I46d53e748d8932ed1183bedbdeb5eefcde679f9e

--- a/puppet/services/aodh-base.yaml
+++ b/puppet/services/aodh-base.yaml
@@ -77,7 +77,7 @@ outputs:
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/aodh'
         aodh::debug: {get_param: Debug}
-        aodh::auth::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri] }
+        aodh::auth::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix] }
         aodh::rabbit_userid: {get_param: RabbitUserName}
         aodh::rabbit_password: {get_param: RabbitPassword}
         aodh::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
