--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -320,7 +320,7 @@ resources:
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
             - bootstrap_node # provided by BootstrapNodeConfig
             - all_nodes # provided by allNodesConfig
-            - vip_data # provided by vip-config
+            - vip_data # provided by allNodesConfig
             - '"%{::osfamily}"'
             - cinder_dellsc_data # Optionally provided by ControllerExtraConfigPre
             - cinder_netapp_data # Optionally provided by ControllerExtraConfigPre
