--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -988,42 +988,22 @@ resources:
       objectstorage_servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
       cephstorage_servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
 
-  # Nested stack deployment runs after all other controller deployments
-  ControllerNodesPostDeployment:
-    type: OS::TripleO::ControllerPostDeployment
-    depends_on: [ControllerAllNodesDeployment]
+  # Post deployment steps for all roles
+  AllNodesDeploySteps:
+    type: OS::TripleO::PostDeploySteps
     properties:
-      servers: {get_attr: [Controller, attributes, nova_server_resource]}
-      RoleData: {get_attr: [ControllerServiceChain, role_data]}
-
-  ComputeNodesPostDeployment:
-    type: OS::TripleO::ComputePostDeployment
-    depends_on: [ComputeAllNodesDeployment]
-    properties:
-      servers: {get_attr: [Compute, attributes, nova_server_resource]}
-      RoleData: {get_attr: [ComputeServiceChain, role_data]}
-
-  ObjectStorageNodesPostDeployment:
-    type: OS::TripleO::ObjectStoragePostDeployment
-    depends_on: [ObjectStorageAllNodesDeployment]
-    properties:
-      servers: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
-      RoleData: {get_attr: [ObjectStorageServiceChain, role_data]}
-
-  BlockStorageNodesPostDeployment:
-    type: OS::TripleO::BlockStoragePostDeployment
-    depends_on: [ControllerNodesPostDeployment, BlockStorageAllNodesDeployment]
-    properties:
-      servers: {get_attr: [BlockStorage, attributes, nova_server_resource]}
-      RoleData: {get_attr: [BlockStorageServiceChain, role_data]}
-
-  CephStorageNodesPostDeployment:
-    type: OS::TripleO::CephStoragePostDeployment
-    depends_on: [ControllerNodesPostDeployment, CephStorageAllNodesDeployment]
-    properties:
-      servers: {get_attr: [CephStorage, attributes, nova_server_resource]}
-      RoleData: {get_attr: [CephStorageServiceChain, role_data]}
-
+      servers:
+        Controller: {get_attr: [Controller, attributes, nova_server_resource]}
+        Compute: {get_attr: [Compute, attributes, nova_server_resource]}
+        BlockStorage: {get_attr: [BlockStorage, attributes, nova_server_resource]}
+        ObjectStorage: {get_attr: [ObjectStorage, attributes, nova_server_resource]}
+        CephStorage: {get_attr: [CephStorage, attributes, nova_server_resource]}
+      role_data:
+        Controller: {get_attr: [ControllerServiceChain, role_data]}
+        Compute: {get_attr: [ComputeServiceChain, role_data]}
+        BlockStorage: {get_attr: [BlockStorageServiceChain, role_data]}
+        ObjectStorage: {get_attr: [ObjectStorageServiceChain, role_data]}
+        CephStorage: {get_attr: [CephStorageServiceChain, role_data]}
 
 outputs:
   ManagedEndpoints:
